omni/tests/goldens/types/undefined_ident_11.omni
let result11:int = missing11
